--- a/src/main/resources/properties/jdbc.properties
+++ b/src/main/resources/properties/jdbc.properties
@@ -1,7 +1,8 @@
 #from
-jdbc.mysql.from.connection.url=jdbc:mysql://127.0.0.1:3306/spring_batch_left?&useUnicode=true&characterEncoding=utf-8
+jdbc.mysql.from.connection.url=jdbc:mysql://127.0.0.1:3306/spring_batch_left?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
 jdbc.mysql.from.connection.username=root
-jdbc.mysql.from.connection.password=root
+jdbc.mysql.from.connection.password=123456
+jdbc.mysql.from.connection.driver=com.mysql.cj.jdbc.Driver
 
 jdbc.mysql.from.connection.filters=stat
 jdbc.mysql.from.connection.maxActive=250
@@ -12,7 +13,7 @@ jdbc.mysql.from.connection.removeAbandoned=true
 jdbc.mysql.from.connection.removeAbandonedTimeout=60
 jdbc.mysql.from.connection.timeBetweenEvictionRunsMillis=60000
 jdbc.mysql.from.connection.minEvictableIdleTimeMillis=30000
-jdbc.mysql.from.connection.validationQuery=SELECT 'x' from dual
+jdbc.mysql.from.connection.validationQuery=SELECT 1 from dual
 jdbc.mysql.from.connection.testWhileIdle=true
 jdbc.mysql.from.connection.testOnBorrow=false
 jdbc.mysql.from.connection.testOnReturn=false
@@ -21,10 +22,11 @@ jdbc.mysql.from.connection.maxPoolPreparedStatementPerConnectionSize=50
 
 
 #to
-jdbc.mysql.to.connection.url=jdbc:mysql://127.0.0.1:3306/spring_batch_right?&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
+jdbc.mysql.to.connection.url=jdbc:mysql://127.0.0.1:3306/spring_batch_right?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
 jdbc.mysql.to.connection.username=root
-jdbc.mysql.to.connection.password=root
+jdbc.mysql.to.connection.password=123456
 
+jdbc.mysql.to.connection.driver=com.mysql.cj.jdbc.Driver
 jdbc.mysql.to.connection.filters=stat
 jdbc.mysql.to.connection.maxActive=50
 jdbc.mysql.to.connection.initialSize=10
@@ -42,10 +44,11 @@ jdbc.mysql.to.connection.poolPreparedStatements=true
 jdbc.mysql.to.connection.maxPoolPreparedStatementPerConnectionSize=50
 
 #data_rep
-jdbc.mysql.rep.connection.url=jdbc:mysql://127.0.0.1:3306/data_rep?&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
+jdbc.mysql.rep.connection.url=jdbc:mysql://127.0.0.1:3306/data_rep?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
 jdbc.mysql.rep.connection.username=root
-jdbc.mysql.rep.connection.password=root
+jdbc.mysql.rep.connection.password=123456
 
+jdbc.mysql.rep.connection.driver=com.mysql.cj.jdbc.Driver
 jdbc.mysql.rep.connection.filters=stat
 jdbc.mysql.rep.connection.maxActive=50
 jdbc.mysql.rep.connection.initialSize=10
